fix modal spacing

--- a/src/components/modal/modal.css
+++ b/src/components/modal/modal.css
@@ -1,86 +1,86 @@
 .modal,
 .modal-backdrop {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .modal-backdrop {
-    -ms-flex-direction: column;
-    flex-direction: column;
-    position: fixed;
-    left: 0;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    background-color: hsla(0, 0%, 89.8%, 0.75);
-    z-index: 100;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  background-color: hsla(0, 0%, 89.8%, 0.75);
+  z-index: 100;
 }
 
 .modal {
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    width: 100%;
-    margin: 25px;
-    padding-top: 20vh;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  width: 100%;
+  margin: 25px;
+  padding-top: 20vh;
 }
 
 .card-edit-form {
-    position: relative;
-    width: 100%;
-    max-width: 600px;
-
-    padding: 20px 20px 8px;
-    border-radius: 8px;
-    -webkit-box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.3),
-        0 2px 6px 2px rgba(60, 64, 67, 0.15);
-    box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.3),
-        0 2px 6px 2px rgba(60, 64, 67, 0.15);
-    -webkit-transition: all 0.2s ease-in-out;
-    transition: all 0.2s ease-in-out;
+  position: relative;
+  width: 100%;
+  max-width: 600px;
+  margin: 0 40px;
+  padding: 20px 20px 8px;
+  border-radius: 8px;
+  -webkit-box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.3),
+    0 2px 6px 2px rgba(60, 64, 67, 0.15);
+  box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.3),
+    0 2px 6px 2px rgba(60, 64, 67, 0.15);
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
 
 .App.night .card-edit-form {
-    background: #3f3f41;
+  background: #3f3f41;
 }
 .App.day .card-edit-form {
-    background: #fff;
+  background: #fff;
 }
 .card-edit-form input {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 
 .card-edit-form .modal-footer {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: justify;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .card-edit-form .modal-footer .delete-btn {
-    padding: 8px;
-    margin-left: -8px;
-    border: none;
-    border-radius: 4px;
-    background-color: #fff;
+  padding: 8px;
+  margin-left: -8px;
+  border: none;
+  border-radius: 4px;
+  background-color: #fff;
 }
 
 .card-edit-form .modal-footer .submit-btn {
-    height: 36px;
-    padding: 8px 24px;
-    border-radius: 4px;
-    font-family: Product Sans, system, -apple-system, BlinkMacSystemFont, Roboto,
-        Helvetica Neue, Segoe UI, Arial, sans-serif;
-    font-weight: 700;
-    font-size: 14px;
-    border: none;
+  height: 36px;
+  padding: 8px 24px;
+  border-radius: 4px;
+  font-family: Product Sans, system, -apple-system, BlinkMacSystemFont, Roboto,
+    Helvetica Neue, Segoe UI, Arial, sans-serif;
+  font-weight: 700;
+  font-size: 14px;
+  border: none;
 }
